--- a/ms-seguridad-dev.properties
+++ b/ms-seguridad-dev.properties
@@ -1,2 +1,3 @@
 ms.seguridad.property= PROPERTIES DE MS-SEGURIDAD AMBIENTE DESARROLLO
 spring.jpa.hibernate.ddl-auto=update
+dato.propiedad=Valor desde  ms-seguridad-dev-configserver
