--- a/ms-seguridad-dev.properties
+++ b/ms-seguridad-dev.properties
@@ -1,3 +1,3 @@
 ms.seguridad.property= PROPERTIES DE MS-SEGURIDAD AMBIENTE DESARROLLO
 spring.jpa.hibernate.ddl-auto=update
-dato.propiedad=Valor desde  ms-seguridad-XXXXXXXXXXX
+dato.propiedad=Valor desde  ms-seguridad-YYYYYYYYYY
